; ModuleID = '/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-data.c_get_queue_by_alias.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-data.c_get_queue_by_alias.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZERO_UID = common dso_local global i64 0, align 8
@alias = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @get_queue_by_alias(i64 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32**, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i64, i64* @ZERO_UID, align 8
  store i64 %8, i64* %3, align 8
  br label %9

9:                                                ; preds = %7, %1
  %10 = load i64, i64* %3, align 8
  %11 = call i64 @map_ll_vptr_get(i32* @alias, i64 %10)
  %12 = inttoptr i64 %11 to i32**
  store i32** %12, i32*** %4, align 8
  %13 = load i32**, i32*** %4, align 8
  %14 = icmp eq i32** %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %9
  store i32* null, i32** %2, align 8
  br label %19

16:                                               ; preds = %9
  %17 = load i32**, i32*** %4, align 8
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %2, align 8
  br label %19

19:                                               ; preds = %16, %15
  %20 = load i32*, i32** %2, align 8
  ret i32* %20
}

declare dso_local i64 @map_ll_vptr_get(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
